Layout issue fix

--- a/css/grid.css
+++ b/css/grid.css
@@ -41,8 +41,8 @@
 .grid-16,
 .grid-1-3 {
   float: left;
-  margin-left: 10px;
-  margin-right: 10px;
+  /* margin-left: 10px;
+  margin-right: 10px; */
 }
 
 .grid-1 {
